opam-version: "2.0"
synopsis: "An OCaml library parsing CSV files"
description:
  "Cosovo is a library for parsing CSV files, with support for sparse CSV files"
maintainer: ["mika@illouz.net"]
authors: ["Mika Illouz"]
license: "BSD"
homepage: "https://github.com/barko/cosovo"
bug-reports: "https://github.com/barko/cosovo/issues"
depends: [
  "dune" {> "1.5"}
  "re" {>= "1.9.0"}
  "cmdliner" {>= "1.0.4"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "@install" "-p" name "-j" jobs]
]

dev-repo: "git+https://github.com/barko/cosovo.git"
